
[TestMarkCommand/marks_the_focused_window_-_`marks_mark_mark1` - 1]
Context:
  windows:
    - app-bundle-id: ""
      app-name: app1
      window-id: 1
      window-title: title1
      workspace: ""

Command:
  $ aerospace-marks mark mark1

Result:
  stdout:
    Replaced all marks with 'mark1'
  stderr: ""
---

[TestMarkCommand/marks_window_by_id_-_`marks_mark_mark1_--window-id_2` - 1]
Context:
  windows:
    - app-bundle-id: ""
      app-name: app1
      window-id: 1
      window-title: title1
      workspace: ""
    - app-bundle-id: ""
      app-name: app2
      window-id: 2
      window-title: title2
      workspace: ""

Command:
  $ aerospace-marks mark mark1 --window-id 2

Result:
  stdout:
    Replaced all marks with 'mark1'
  stderr: ""
---

[TestMarkCommand/marks_the_focused_window_-_`marks_mark_--add` - 1]
Context:
  windows:
    - app-bundle-id: ""
      app-name: app1
      window-id: 1
      window-title: title1
      workspace: ""

Command:
  $ aerospace-marks mark mark2 --add

Result:
  stdout:
    Added mark: mark2
  stderr: ""
---

[TestMarkCommand/validates_missing_identifier_-_`marks_mark` - 1]
Context:
  (none)

Command:
  $ aerospace-marks mark

Result:
  stdout: ""
  stderr:
    accepts 1 arg(s), received 0
---

[TestMarkCommand/marks_toggles_mark_(remove)_-_`marks_foobar_--toggle` - 1]
Context:
  windows:
    - app-bundle-id: ""
      app-name: app2
      window-id: 2
      window-title: title2
      workspace: ""

Command:
  $ aerospace-marks mark foobar --toggle

Result:
  stdout:
    Toggling mark: foobar
  stderr: ""
---

[TestMarkCommand/marks_toggles_mark_(adding)_-_`marks_foobar_--toggle` - 1]
Context:
  windows:
    - app-bundle-id: ""
      app-name: app2
      window-id: 2
      window-title: title2
      workspace: ""

Command:
  $ aerospace-marks mark foobar --toggle

Result:
  stdout:
    Toggling mark: foobar
  stderr: ""
---

[TestMarkCommand/fails_when_empty_identifier_-_`marks_''` - 1]
Context:
  windows:
    - app-bundle-id: ""
      app-name: app2
      window-id: 2
      window-title: title2
      workspace: ""

Command:
  $ aerospace-marks mark

Result:
  stdout: ""
  stderr:
    argument cannot be empty or whitespace
---
